# duatic_dynaarm_description

./: CMakeLists.txt  README.md  package.xml  repos.list
.github/workflows/: build-humble.yml  reusable_ici.yml
launch/: view.launch.py
test/: test_launch_view.py
urdf/: dynaarm.urdf.xacro  dynaarm_standalone.urdf.xacro  dynaarm_standalone_dual.urdf.xacro
urdf/common/: dynaarm.ros2control.xacro  dynaarm_common.urdf.xacro
urdf/common/arowana4/: dynaarm_parameters.urdf.xacro
urdf/common/baracuda12/: dynaarm_parameters.urdf.xacro
